--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ header
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    position: relative;
 }
 
 .img-wrapper 
@@ -19,6 +20,7 @@ header
   width: 100%;
   height: 100%;
   overflow: hidden;
+  background-color: rgba(0,0,0,0.8);
 
 }
 
@@ -27,5 +29,53 @@ header
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.5%;
+    opacity: 0.5;
+}
+
+.banner
+{
+    position: absolute;
+    top: 30%;
+    left: 15%;
+}
+
+.banner h1, h2
+{
+    color:#ffffff;
+    font-size: 3.5rem;
+    font-family: "Baloo Da 2", serif;
+    font-weight: 200;
+    text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
+    line-height: 3.5rem;
+    
+}
+
+.banner p 
+{
+    font-family: "Josefin Slab ", serif;
+    color: #fff;
+    font-size: 1.5rem;
+    text-shadow: .2rem .2rem rgba(0,0,0, .4);
+    margin-bottom: 2rem;
+}
+
+.banner button
+{
+    font-family: "Mulish", serif;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .2;
+    background: #7F00FF;
+    background: -webkit-linear-gradient(to right, #E100FF, #7F00FF); 
+    background: linear-gradient(to left, #E100FF, #7F00FF); 
+    padding: 1rem 3rem;
+    border:none;
+    border-radius: 5px;
+    cursor:pointer;
+
+}
+
+.banner button:hover
+{
+    color:black;
 }
