--- a/style.css
+++ b/style.css
@@ -30,6 +30,18 @@ header
     height: 100%;
     object-fit: cover;
     opacity: 0.5;
+    animation: zoom 25s;
+}
+
+
+@keyframes zoom
+{
+    0%{ 
+        transform: scale(1.3);
+    }    
+    100%{ 
+        transform: scale(1);
+    }
 }
 
 .banner
@@ -47,6 +59,8 @@ header
     font-weight: 200;
     text-shadow: .3rem .4rem 2px rgba(0, 0, 0, .4);
     line-height: 3.5rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.5s forwards;
     
 }
 
@@ -57,6 +71,8 @@ header
     font-size: 1.5rem;
     text-shadow: .2rem .2rem rgba(0,0,0, .4);
     margin-bottom: 2rem;
+    opacity: 0;
+    animation: moveBanner 1s 0.7s forwards;
 }
 
 .banner button
@@ -72,10 +88,23 @@ header
     border:none;
     border-radius: 5px;
     cursor:pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.9s forwards;
 
 }
 
 .banner button:hover
 {
     color:black;
+}
+
+@keyframes moveBanner 
+{
+    0%{
+        transform: translateY(10rem) rotateY(-30deg);
+    }    
+    100%{
+        transform: translateY(0) rotateY(0);
+        opacity: 1;
+    }
 }
