--- a/style.css
+++ b/style.css
@@ -5,7 +5,35 @@
 *{
     margin: 0;
     padding: 0;
+    list-style: none;
+    text-decoration: none;
  }
+
+ 
+.Menuhamburger
+{
+    /*background-color: red;*/
+    width: 2rem;
+    height: 2rem;
+    position: fixed;
+    right: 2rem;
+    top: 2rem;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+.line
+{
+    width: 100%;
+    height: .2rem;
+    background-color: #fff;
+    box-shadow: 0.1rem 0.1rem 1px;
+    cursor: pointer;
+
+}
+
 
 header
 {
@@ -107,4 +135,36 @@ header
         transform: translateY(0) rotateY(0);
         opacity: 1;
     }
+}
+
+.sidebar
+{
+     width: 20rem;
+     height: 100vh;
+     background-color: #fff;
+     position: fixed;
+     top: 0;
+     right: 0;
+}
+
+.menu
+{
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.menuitem
+{
+    text-align: center;
+}
+
+.social-media
+{
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    
 }
