--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    transition: 1s;
+}
+
+.show-menu .Menuhamburger
+{
+    right: 16rem;
+    transition: 1s;
 }
 
 .line
@@ -31,6 +38,10 @@
     background-color: #fff;
     box-shadow: 0.1rem 0.1rem 1px;
     cursor: pointer;
+}
+
+.show-menu #line2
+{
 
 }
 
@@ -144,7 +155,14 @@ header
      background-color: #fff;
      position: fixed;
      top: 0;
-     right: 0;
+     right: -20rem;
+     transition: all 1s;
+}
+
+.show-menu .sidebar
+{
+    right: 0;
+    
 }
 
 .menu
@@ -158,13 +176,49 @@ header
 .menuitem
 {
     text-align: center;
+    margin-bottom: .5rem;
+}
+
+.menu-link
+{
+    font-family: var(--font-action);
+    font-size: 2rem;
+    color: #555;
+    transition: color 1s;
+}
+
+.menu-link:hover 
+{
+    color: #6a3093;
 }
 
 .social-media
 {
     position: absolute;
-    top: 80%;
+    bottom: 2rem;
+    /* top: 80%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    
+    transform: translate(-50%, -50%);  */
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+
+}
+.social-media i
+{
+    background-color: #6a3093;
+    color: rgb(255, 255, 2555);
+    height: 2.5rem;
+    width: 2.5rem;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    transition: backgroud-color 1s;
+}
+
+.social-media i:hover
+{
+    background-color: #a044ff;
 }
