--- a/style.css
+++ b/style.css
@@ -38,11 +38,56 @@
     background-color: #fff;
     box-shadow: 0.1rem 0.1rem 1px;
     cursor: pointer;
+    transition: transform 1s;
+}
+
+.show-menu #line1
+{
+    transform: rotate(45deg) translate(.35rem, .45rem);
+    
 }
 
 .show-menu #line2
 {
+    opacity: 0;
+    visibility: hidden;
+}
 
+.show-menu #line3
+{
+    transform: rotate(-45deg) translate(-.10rem, -.45rem);
+}
+
+.Menuhamburger span
+{
+    position: absolute;
+    left: 3rem;
+    height: 2rem;
+    width: 6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #7F00FF;
+    color: white;
+    font-family: var(--font-acition);
+    opacity: 0;
+
+}
+
+.Menuhamburger span::before
+{
+    content: "";
+    position: absolute;
+    border-right: .5rem solid #a044ff;
+    border-top: .5rem solid transparent;
+    border-left: .5rem solid transparent;
+    border-bottom: .5rem solid transparent;
+    left: -1rem;
+}
+
+.show-menu .Menuhamburger:hover span
+{
+    opacity: 1;
 }
 
 
@@ -221,4 +266,169 @@ header
 .social-media i:hover
 {
     background-color: #a044ff;
+}
+
+.conhecimentos
+{   
+    display: grid;
+    grid-template-columns: repeat(16, 1fr);
+    grid-template-rows: repeat(6, 6rem);
+    row-gap: .5rem;
+
+}
+.conhecimento:nth-child(1)
+{
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(2)
+{
+    grid-column: 3 / 6;
+    grid-row: 3 / 5;
+}
+
+.conhecimento:nth-child(3)
+{
+    grid-column: 4 / 7;
+    grid-row: 5 / -1;
+}
+
+.conhecimento:nth-child(4)
+{
+    grid-column: 11 / 14;
+    grid-row: 1 / 3;
+}
+
+.conhecimento:nth-child(5)
+{
+    grid-column: 12 / 15;
+    grid-row:   3 / 5;
+}
+
+.conhecimento:nth-child(6)
+{
+    grid-column: 11 / 14;
+    grid-row: 5 / -1;
+}
+
+.sessao-conhecimentos
+{
+    background-color: #f5f5f5;
+}
+.sessao-header
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.sessao-header h1
+{
+    font-family:  var(--font-primary);
+    font-size: 3rem;
+    color: #4b4b4b;     
+    border-bottom: solid 3px #6a3093;
+    margin-bottom: 1.5rem;
+}
+
+.conhecimento-header
+{
+    display: flex;
+    align-items: center;
+    color: #4b4b4b;
+}
+
+.conhecimento-header i
+{
+    font-size: 2.5rem;
+}
+
+.conhecimento-header h3
+{
+    font-family: var(--font-secundary);
+    font-size: 2rem;
+    padding-left: 1rem;
+}
+
+.conhecimento-text
+{
+    font-family: var(--font-secundary);
+    margin-top: 1rem;
+}
+
+.conhecimentos-img-wrapper
+{
+    grid-column: 7 / 11;
+    grid-row: 2 / 6;
+    width: 100%;
+}
+
+.conhecimentos-img-wrapper img
+{
+    object-fit: cover;
+    width: 100%;
+}
+
+.portfolio 
+{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card
+{
+    /* ou 20 por 30*/
+    width: 18rem;
+    height: 25rem;
+    position: relative;
+}
+
+.card-img-wrapper
+{
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+}
+
+.card-img-wrapper img
+{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: .5rem;
+    /* opacity: .8; */
+}
+
+.card-info
+{
+    position: absolute;
+    bottom: 0;
+    padding: 2rem;
+    text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, .4);
+}
+
+.card-info h2
+{
+    font-family: var(--font-primary);
+    font-size: 2rem;
+    font-weight: 500;
+    color: #eee;
+}
+
+.card-info h3
+{
+    font-family: var(--font-action);
+    /* font-size: 2rem; */
+    font-weight: bolder;
+    color: #ff4081;
+}
+
+.card-info p
+{
+    font-family: var(--font-secundary);
+    color: #eee;
+    font-weight: bold;
+    width: 80%;
+
 }
