--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ header
      top: 0;
      right: -20rem;
      transition: all 1s;
+     z-index: 99;
 }
 
 .show-menu .sidebar
@@ -370,6 +371,11 @@ header
     width: 100%;
 }
 
+.sessao-portfolio
+{
+    background-color: #f5f5f5;
+}
+
 .portfolio 
 {
     display: flex;
@@ -398,14 +404,23 @@ header
     height: 100%;
     border-radius: .5rem;
     /* opacity: .8; */
+    transition: opacity .3s;
+}
+
+.card:hover .card-img-wrapper img
+{
+    opacity: .7;
 }
 
 .card-info
 {
     position: absolute;
     bottom: 0;
+    opacity: 0;
+    visibility: hidden;
     padding: 2rem;
     text-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, .4);
+    transition: all .3s;
 }
 
 .card-info h2
@@ -422,6 +437,7 @@ header
     /* font-size: 2rem; */
     font-weight: bolder;
     color: #ff4081;
+    margin-bottom: 1.5rem;
 }
 
 .card-info p
@@ -430,5 +446,125 @@ header
     color: #eee;
     font-weight: bold;
     width: 80%;
+    margin-bottom: 2rem;
+}
 
+.card-info button
+{
+    width: 8rem;
+    height: 2.5rem;
+    background: #7F00FF;
+    background: -webkit-linear-gradient(to right, #E100FF, #7F00FF); 
+    background: linear-gradient(to left, #E100FF, #7F00FF); 
+    font-family: var(--font-action);
+    color: #eee;
+    border-radius: .5rem;
+    border: none;
+    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
+    cursor: pointer;
+}
+
+.card:hover .card-info
+{
+    bottom: 2rem;
+    opacity: 1;
+    visibility: visible;
+}
+
+.sessao-contato
+{
+    width: 100%;
+    height: 100vh;
+    background-color: #eee;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contato-wrapper
+{
+    width: 60%;
+    height: 30rem;
+    display: flex;
+    box-shadow: 0 2rem 3rem;
+}
+
+.contato-left
+{
+    width: 35%;
+    background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)), url(Imagens/bg.jpg);
+    background-size: cover;
+}
+
+.contato-right
+{
+    width: 65%;
+    background-color: #eee;
+    padding: 1rem 3rem 3rem 3rem;
+}
+.sessao-contato h1
+{
+    width: 100%;
+    text-align: center;
+    font-family: var(--font-primary);
+    color: #272727;
+    font-size: 3rem;
+    font-weight: lighter;
+
+}
+
+.sessao-contato form
+{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input-group 
+{
+    position: relative;
+}
+
+.field
+{
+    background: transparent;
+    border: none;
+    width: 20rem;
+    font-size: 1.5rem;
+    font-family: var(--font-secundary);
+    border-bottom: 2px dashed #636363;
+    height: 3rem;
+    outline: none;
+    margin: 1rem 0;
+
+}
+
+.input-group textarea
+{
+    padding-top: 1rem;
+}
+
+.field-label
+{
+    position: absolute;
+    left: 0;
+    top: 2rem;
+    font-size: 1.2rem;
+    font-family: var(--font-secundary);
+    text-transform: uppercase;
+    transition: all 0.3s;
+
+}
+
+.field:focus
+{
+     top:0cm;
+     font-size: 1rem;
+}
+
+.field:focus ~ label
+{
+     top:0cm;
+     font-size: 1rem;
 }
