--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@
 
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
 
+
+body{
+    min-height: 100vh;
+    min-width: 100vw;
+}
+
+main{
+    width: 50vw;
+}
+
+selection.card-img-wrapper{
+    width: 50vw;
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -279,7 +294,7 @@ header
 }
 .conhecimento:nth-child(1)
 {
-    grid-column: 4 / 7;
+    grid-column: 4 / 6;
     grid-row: 1 / 3;
 }
 
@@ -304,13 +319,13 @@ header
 .conhecimento:nth-child(5)
 {
     grid-column: 12 / 15;
-    grid-row:   3 / 5;
+    grid-row:   3 / 3;
 }
 
 .conhecimento:nth-child(6)
 {
-    grid-column: 11 / 14;
-    grid-row: 5 / -1;
+    grid-column: 9 / 14;
+    grid-row: 6 / 11;
 }
 
 .sessao-conhecimentos
@@ -428,7 +443,10 @@ header
     font-family: var(--font-primary);
     font-size: 2rem;
     font-weight: 500;
-    color: #eee;
+    color: rgb(255, 255, 255);
+   text-shadow: -1px -1px 0 #5f046b;
+    
+    
 }
 
 .card-info h3
@@ -436,14 +454,14 @@ header
     font-family: var(--font-action);
     /* font-size: 2rem; */
     font-weight: bolder;
-    color: #ff4081;
+    color: #330a5c;
     margin-bottom: 1.5rem;
 }
 
 .card-info p
 {
     font-family: var(--font-secundary);
-    color: #eee;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     width: 80%;
     margin-bottom: 2rem;
@@ -491,9 +509,10 @@ header
 
 .contato-left
 {
-    width: 35%;
-    background: linear-gradient(rgba(15, 15, 15, 0.6), rgba(22, 22, 22, 0.9)), url(Imagens/bg.jpg);
+    width: 35%; 
+    background: url(Imagens/cell.jpg);
     background-size: cover;
+   
 }
 
 .contato-right
@@ -543,7 +562,11 @@ header
 .input-group textarea
 {
     padding-top: 1rem;
+    max-width: 25rem;
+    max-height: 3rem;
+    resize: none;
 }
+
 
 .field-label
 {
@@ -554,17 +577,103 @@ header
     font-family: var(--font-secundary);
     text-transform: uppercase;
     transition: all 0.3s;
-
 }
 
-.field:focus
-{
-     top:0cm;
-     font-size: 1rem;
-}
 
 .field:focus ~ label
 {
      top:0cm;
      font-size: 1rem;
 }
+
+.field:focus
+{
+     border-bottom: 1px solid;
+}
+
+.btn-enviar
+{
+    text-transform: uppercase;
+    width: 50%;
+    height: 2.5rem;
+    background: #7F00FF;
+    background: -webkit-linear-gradient(to right, #E100FF, #7F00FF); 
+    background: linear-gradient(to left, #E100FF, #7F00FF); 
+    font-family: var(--font-action);
+    color: #eee;
+    border-radius: .5rem;
+    border: none;
+    box-shadow: 0 .1rem .8rem rgba(0, 0, 0, .4);
+    cursor: pointer;
+}
+
+
+html {
+    scroll-behavior: smooth;
+  }
+
+
+
+footer{
+      width: 100%;
+      height: 5rem;
+      background-color: #555;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+}
+
+  .footer-content{
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer-content p{
+      font-family: var(--font-secundary);
+      color: #eee;
+      font-size: 1.2rem;
+  }
+
+  .social-list a{
+      margin: 0 2rem;
+      color: #fff
+  }
+
+  .social-list ul{
+    display: flex;
+  }
+
+  #link-top{
+      position: fixed;
+      right: 3rem;
+      bottom: 1rem;
+      width: 3rem;
+      height: 3rem;
+      background: #6a3093;
+      background: -webkit-linear-gradient(to right, #a044ff, #6a3093);
+      background: linear-gradient(to left, #a044ff, #6a3093);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      border-radius: .3rem;
+      box-shadow: 0 0.1rem 0.6rem #20202009;
+  }
+
+  #link-whatsapp{
+    position: fixed;
+    right: 3rem;
+    bottom: 6rem;
+    width: 3rem;
+    height: 3rem;
+    background: #00f729;
+    background: -webkit-linear-gradient(to right, #07f773, #08f027);
+    background: linear-gradient(to left, #4aeb00, #1eff00);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    border-radius: .3rem;
+    box-shadow: 0 0.1rem 0.6rem #20202009;
+  }
