--- a/style.css
+++ b/style.css
@@ -3,27 +3,16 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
 
 
-body{
-    min-height: 100vh;
-    min-width: 100vw;
-}
-
-main{
-    width: 50vw;
-}
-
-selection.card-img-wrapper{
-    width: 50vw;
-}
-
 
 *{
     margin: 0;
     padding: 0;
-    list-style: none;
+     list-style: none;
     text-decoration: none;
+    /* box-sizing: border-box; */
  }
 
+ 
  
 .Menuhamburger
 {
@@ -290,6 +279,7 @@ header
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: repeat(6, 6rem);
     row-gap: .5rem;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 .conhecimento:nth-child(1)
@@ -362,14 +352,14 @@ header
 
 .conhecimento-header h3
 {
-    font-family: var(--font-secundary);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 2rem;
     padding-left: 1rem;
 }
 
 .conhecimento-text
 {
-    font-family: var(--font-secundary);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 1rem;
 }
 
@@ -454,14 +444,14 @@ header
     font-family: var(--font-action);
     /* font-size: 2rem; */
     font-weight: bolder;
-    color: #330a5c;
+    color: #cf09c5;
     margin-bottom: 1.5rem;
 }
 
 .card-info p
 {
-    font-family: var(--font-secundary);
-    color: rgb(0, 0, 0);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(255, 255, 255);
     font-weight: bold;
     width: 80%;
     margin-bottom: 2rem;
@@ -504,7 +494,7 @@ header
     width: 60%;
     height: 30rem;
     display: flex;
-    box-shadow: 0 2rem 3rem;
+    box-shadow: 0 0rem 2rem;
 }
 
 .contato-left
@@ -543,18 +533,19 @@ header
 .input-group 
 {
     position: relative;
+    
 }
 
 .field
 {
     background: transparent;
-    border: none;
+    border: rgb(73, 68, 68);
     width: 20rem;
     font-size: 1.5rem;
-    font-family: var(--font-secundary);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     border-bottom: 2px dashed #636363;
     height: 3rem;
-    outline: none;
+    outline: none; 
     margin: 1rem 0;
 
 }
@@ -574,7 +565,7 @@ header
     left: 0;
     top: 2rem;
     font-size: 1.2rem;
-    font-family: var(--font-secundary);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-transform: uppercase;
     transition: all 0.3s;
 }
@@ -630,7 +621,7 @@ footer{
   }
 
   .footer-content p{
-      font-family: var(--font-secundary);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       color: #eee;
       font-size: 1.2rem;
   }
@@ -675,5 +666,139 @@ footer{
     align-items: center;
     color: #fff;
     border-radius: .3rem;
-    box-shadow: 0 0.1rem 0.6rem #20202009;
+    box-shadow: 0 0.1rem 0.6rem #7e797909;
   }
+
+ @media (max-width: 600px) {
+    /* .sessao-conhecimentos, .conhecimento-text, .conhecimento, .sessao-header{
+        width: 80%;
+        height: 100%;
+    } */
+
+    .banner h1 , .banner h2{
+       
+       font-size: 3rem;
+       right: 15vh;
+    }
+
+
+    .conhecimentos-img-wrapper {
+        display: none;
+    }
+
+    body{
+       max-width: 100%;
+        background-color: rgb(255, 255, 255);
+       position: relative;
+    }
+
+    html {
+        max-width: 100%;
+    }
+   
+
+    .conhecimentos {
+        width: 50%;
+        flex-wrap:wrap;
+        display:contents;
+        grid-template-columns: repeat(16, 15fr);
+        grid-template-rows: repeat(30, 15rem);
+        row-gap: .25rem;
+        grid-column: 25 / 15;
+        grid-row: 25 / 15;
+        align-items: center;
+        align-content: center;
+        margin-top: 10px;
+        background-color: blue;
+        
+    }
+
+    .sessao-header h1
+    {
+    margin-top: 10vh;
+    font-size: 3rem;
+    left: 9rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #4b4b4b;     
+    border-bottom: solid 3px #6a3093;
+    margin-bottom: 9.5rem;
+    padding-top: -2rem;
+    }
+
+    .conhecimento-text p, .conhecimento-header h3{
+        /* background-color: blue; */
+        padding: 0.6rem;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .conhecimento-text p{
+        align-items: center;
+    }
+
+    .conhecimento-header i {
+        align-items: center;
+        margin-left:5rem;
+    }
+    .sessao-conhecimentos h1 {  
+        margin-bottom: 33px;
+    }
+
+    .sessao-portfolio h1 {
+        margin-bottom: 33px;
+    }
+ 
+   
+    .card-img-wrapper {
+        
+       /* padding: 1rem; */
+       flex-direction: column;
+       flex-wrap:wrap;
+       color: blue;
+    }   
+
+    
+    .sessao-contato form{
+        /* background-color:blue; */
+    }
+    
+    .contato-wrapper{
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       width: 16rem;
+      
+        /* background-color: rgb(146, 202, 15); */
+    }
+    .contato-left{
+     
+        background-color:rgb(175, s6, 57);
+    }
+    .contato-right{
+        width: 90%;
+        margin-left: 1rem;
+    }
+   
+
+    footer{
+        width: 100%;
+        height: 5rem;
+        background-color: rgb(218, 0, 0);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+  }
+
+    .footer-content{
+        background-color: rgb(84, 7, 104);
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+ }
